<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_singer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_vote"
    tools:context="hueic.club.vote.ListSingerActivity">
    <RelativeLayout
        android:id="@+id/bar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/ic_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/label_dstietmuc"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_toRightOf="@+id/btnBack"
            android:layout_toLeftOf="@+id/btnMenu"/>
        <ImageView
            android:id="@+id/btnMenu"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_menu_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <GridView
        android:id="@+id/gridview"
        android:layout_below="@+id/bar_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_above="@+id/footer"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:text="@string/label_dangdien"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@color/colorDangDien"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@color/colorChuanBiDien"
            android:text="@string/label_chuan_bi_dien"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@color/colorDaDien"
            android:text="@string/label_dadien"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@color/colorChuaDien"
            android:text="@string/label_chuadien"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>
