<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_singer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hueic.club.vote.SingerActivity"
    android:background="@mipmap/bg_main">
    <RelativeLayout
        android:id="@+id/bar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/ic_keyboard_backspace_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/label_aboutapp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_toRightOf="@+id/btnBack"
            android:layout_toLeftOf="@+id/btnMenu"/>

    </RelativeLayout>
        <TextView
            android:id="@+id/tvTenUngDung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bar_header"
            android:text="@string/label_aboutNameApp"
            android:gravity="left"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/tvHueIC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bar_header"
            android:gravity="center"
            android:text="        HUEIC VOTE"
            android:textColor="#000000"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tvPhienBan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTenUngDung"
            android:text="@string/label_aboutPhienBanApp"
            android:gravity="left"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/tvPBApp"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTenUngDung"
            android:gravity="right"
            android:text="app_version"
            android:textColor="#000000"
            android:textSize="18sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvPhienBan"
            android:src="@mipmap/icon_vote"/>

</RelativeLayout>
